Added SNS capability to Console policy

--- a/_console/templates/c9-console-template.yaml
+++ b/_console/templates/c9-console-template.yaml
@@ -64,6 +64,7 @@ Resources:
         - 'arn:aws:iam::aws:policy/AWSCloudFormationReadOnlyAccess'
         - 'arn:aws:iam::aws:policy/AWSCodeCommitFullAccess'
         - 'arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess'
+        - 'arn:aws:iam::aws:policy/AmazonSNSFullAccess'
       Path: /
 
   ConsoleInstanceProfile:
