--- a/src/sm-mlops/sm-mlops-template.yaml
+++ b/src/sm-mlops/sm-mlops-template.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: CloudFormation Template for SgaeMaker MlOps Orchestration.
+Description: CloudFormation Template for SagaeMaker MlOps Orchestration.
 
 Parameters:
   SNSTopic:
